--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "7.3.2",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "@babel/plugin-syntax-export-default-from": "^7.2.0",
+    "bootstrap": "4.3.1",
     "bulma": "^0.7.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
